<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="195dp"
        android:text="@string/_7" />

    <Button
        android:id="@+id/8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/7"
        android:layout_toEndOf="@+id/7"
        android:text="@string/_8" />

    <Button
        android:id="@+id/9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/7"
        android:layout_toEndOf="@+id/8"
        android:text="@string/_9" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/7"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="17dp"
        android:text="@string/clear" />

    <Button
        android:id="@+id/4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/7"
        android:layout_marginTop="-195dp"
        android:text="@string/_4" />

    <Button
        android:id="@+id/5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/4"
        android:layout_toEndOf="@+id/7"
        android:text="@string/_5" />

    <Button
        android:id="@+id/6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/7"
        android:layout_marginTop="-195dp"
        android:layout_toEndOf="@+id/8"
        android:text="@string/_6" />

    <Button
        android:id="@+id/btnm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button4"
        android:layout_below="@+id/7"
        android:layout_marginTop="-195dp"
        android:text="@string/m" />

    <Button
        android:id="@+id/1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/4"
        android:text="@string/_1" />

    <Button
        android:id="@+id/2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/4"
        android:layout_toEndOf="@+id/7"
        android:text="@string/_2" />

    <Button
        android:id="@+id/3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/4"
        android:layout_toEndOf="@+id/8"
        android:text="@string/_3" />

    <Button
        android:id="@+id/btnp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button4"
        android:layout_below="@+id/4"
        android:text="@string/p" />

    <Button
        android:id="@+id/0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/1"
        android:text="@string/_0" />

    <Button
        android:id="@+id/btne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/1"
        android:layout_toEndOf="@+id/7"
        android:text="@string/e" />

    <Button
        android:id="@+id/btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button4"
        android:layout_below="@+id/1"
        android:text="@string/s" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="337dp"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="349dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="173dp" />

</RelativeLayout>